# oimodeler

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  bump_version.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bump.yml  bump_version.yml  ci.yml  docs.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  release.yml  tests.yml  version.yml
data/: BeDISCO.fits  modelImage.fits
data/AS209_MATISSE/: OIXP_calflux_2021-07-25T004235_AS_209_U1U2U3U4_IR-LM_LOW_cal_oifits_0.fits  OiXP_AS_209_MATISSE_U1-U2-U3-U4_2023-05-10_N_LOW.fits  OiXP_calflux_2023-05-10T083846_AS_209_U1U2U3U4_IR-LM_LOW_Chop_cal_oifits_0_Lband.fits
data/ASPRO_MATISSE2/: Aspro2_FS_CMa_VLTI_MATISSE_LM_2.86542-4.18239-62ch_A0-B2-C1-D0_2023-02-08.fits
data/ASPRO_MATISSE3/: Aspro2_FS_CMa_VLTI_MATISSE_LM_2.86542-4.18239-62ch_D0-G2-J3-K0_2023-02-08.fits
data/ASPRO_MATISSE_CHROMATIC_BINARY/: Aspro2_alpha_ara_VLTI_MATISSE_LM_3.01416-4.90177-88ch_A0-B2-C1-D0_2022-06-04.fits  Aspro2_alpha_ara_VLTI_MATISSE_LM_3.01416-4.90177-88ch_D0-G2-J3-K0_2022-06-04.fits
data/ASPRO_SPICA_GROWING_UD/: Aspro2_Zeta_Oph_CHARA_SPICA_0.60249-0.89749-60ch_S1-S2-E1-E2-W1-W2_2023-05-12.fits
data/FSCMa_MATISSE/: 2018-12-13T081156_HD45677_A0G1J2J3_IR-LM_LOW_Chop_cal_oifits_0.fits  dustkappa_olivine_graphite_1_20.inp  dustkappa_silicate.inp
data/IMAGES/: modelImage.fits
data/NonInterferometricData/: HD45677_ISO.txt
data/SIMPLE_TESTS/: ASPRO_GRAVITY_0.2UD2_0.8GE10_apl2_pa80_sep1_pa60.fits  ASPRO_MATISSE_0.3PT_0.7ER15_apl1.5_pa=50.fits  simple_models.asprox
docs/: conf.py  requirements.txt
docs/source/: ackn.rst  advancedExamples.rst  afewexamples.rst  api.rst  basicExamples.rst  conf.py  data.rst  examples.rst  expanding.rst  expandingSoftware.rst  fitter.rst  getting_started.rst  index.rst  installation.rst  manipulatingOifitsData.rst  modularity.rst  news.rst  notebooks.rst  oimBasicFourierComponents.rst  oimCustomComponents.rst  oimData.rst  oimDataFilter.rst  oimFTBackends.rst  oimModel.rst  oimOptions.rst  oimParam.rst  oimSimulator.rst  overview.rst  performanceTests.rst  plot.rst  sg_execution_times.rst  simulator.rst  table_citation.csv  table_components_fourier.csv  table_components_image.csv  table_components_radial.csv  table_dataFilter.csv  table_fitters.csv  table_ftbackends.csv  table_interpolators.csv  (+3 more)
examples/: CreateSimulator.py  CreateSimulator_ComputationTime.py  CreateSimulator_ComputationTimeRatio.py  createComplexModel.py  createCustomComponent.py  createCustomComponentFourier.py  createCustomComponentImage.py  createCustomComponentRadialProfile.py  createModelChromatic.py  createModelWithLinkedParameters.py  createSimpleModel.py  loadData.py  testImageComponent.py
examples/AdvancedExamples/: ChromaticModelFit.py  FitsImageCubeModels.py  complexModels.py  paramInterpolators.py  radiativeTransfer.py  rotatingDiskModel.py  timeDependentModelFit.py
examples/BasicExamples/: FitsImageCubeModels.py  basicModels.py  complexModels.py  createModelChromatic.py  createSimpleModel.py  createSimulator.py  exampleOimData.py  exampleOimData2.py  exampleOimDataFilter.py  exampleOimFitterDynesty.py  exampleOimFitterDynesty2.py  exampleOimFitterDynestyMultiprocessing.py  exampleOimFitterEmcee.py  exampleOimFitterEmceeMultiprocessing.py  exampleOimPlot.py  exampleOimSimulator.py  fitsImageModel.py  gettingStarted.py  loadData.py  simpleFitEmcee.py  simulatorChromaticData.py  testPlots.py
examples/CustomModels/: exampleKinematicDisk.py  exampleOimAsymTempGradient.py  exampleOimBinaryOrbit.py  exampleOimBinaryOrbitRvAndSep.py  exampleOimDisco.py  exampleOimGaussLorentz.py  exampleOimRadialRing.py  exampleOimRadialRing2.py  exampleOimStar.py  exampleOimStarHaloGaussLor.py  exampleOimStarHaloIRing.py  exampleOimTempGrad.py  exampleOimTempGradient.py  exampleRadialPowerLaw.py  kinematicDiskTutorial.py
examples/ExpandingSoftware/: createCustomComponentFourier.py  createCustomComponentImage.py  createCustomComponentImageExternalFunction.py  createCustomComponentImageFastRotator.py  createCustomComponentImageSpiral.py  createCustomComponentPowerLawImage.py  createCustomComponentRadialProfileExpRing.py  createCustomParamInterpolator.py  fastRotator.py  usingCustomComponents.py
examples/Modules/: BuildingComlplexModels.py  DataFiltering.py  InterferometricData.py  LoadingFitsImage.py  LoadingFitsImageCube.py  LoadingFitsImages.py  PhotometricAndSpectroscopicData.py  Plotting.py  SimulatingData.py  TheBasicsOfModels.py  TypesOfComponents.py  buildingAndUsingModels.py  emceeFitting.py  emceelFitting.py  gridFitting.py  helpersAndUtils.py  oimData.ipynb  oimDataNotebook.ipynb  paramInterpolators.py  radialProfileComponents.py  simpleMinimizerFitting.py
examples/Other/: calculateOpacities.py  createModelChromatic.py
examples/PerformanceTests/: simulator_ComputationTime.py  simulator_ComputationTimeRatio.py
examples/notebooks/: oimodeler_Ex1_canopus.ipynb  oimodeler_Ex2_94_Aqr.ipynb  (+3 more)
images/: favicon.xcf  logo.xcf
oimodeler/: __init__.py  oimBasicFourierComponents.py  oimCalibrate.py  oimComponent.py  oimComponentImage.py  oimData.py  oimDataFilter.py  oimExtinction.py  oimFTBackends.py  oimFilter.py  oimFitter.py  oimFluxData.py  oimModel.py  oimOptions.py  oimOptoolBackend.py  oimParam.py  oimPlots.py  oimSimulator.py  oimUtils.py
olddocs/: requirements.txt
requirements/: tests.txt
tests/: conftest.py  test_basic_components.py  test_component.py  test_data.py  test_io.py  test_oimBasicFourierComponents.py  test_oimComponent.py  test_oimData.py  test_oimDataFilter.py  test_oimFTBackends.py  test_oimFitter.py  test_oimFluxData.py  test_oimModel.py  test_oimPlots.py  test_oimSimulator.py  test_oimUtils.py  test_serialisation.py  test_simple_models_to_aspro_data.py  tm_simulator_computation_time_ratio.py  tmp_real_data.py  tmp_simple_models_to_aspro_data.py  tmp_simulator_computation_time.py  tmp_simulator_computation_time_ratio.py
(+217 files in other folders)
