[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "oimodeler"
version = "0.2"
authors = [
    { name = "Anthony meilland", email = "ame@oca.eu" },
]
description = 'Optical interferometry modelling tool'
keywords = ["optical", "interferometry", "modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: AIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Natural Language :: English",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    'astropy>=5.2.1',
    'astroquery>=0.4.6',
    'corner>=2.2.1',
    'emcee>=3.1.4',
    'matplotlib>=3.6.3',
    'numpy>=1.24.1',
    'optool>=1.9.4',
    'scipy>=1.10.0',
    'tqdm>=4.64.1'
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "GPLv3"

[project.urls]
Github = "https://gitlab.oca.eu/oimodeler/oimodeler"

[tool.setuptools]
license-files = [
    "LICENSE",
]
include-package-data = false

[tool.setuptools.packages.find]
exclude = [
    "examples*",
    "tests*",
    "doc*",
]
namespaces = false

[tool.black]
line-length = 79

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
