[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "oimodeler"
dynamic = ["version"]
authors = [
    { name = "Anthony meilland", email = "ame@oca.eu" },
]
description = "Optical interferometry modelling tool"
keywords = ["optical", "interferometry", "modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: AIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Natural Language :: English",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "astropy>=5.2.1",
    "astroquery>=0.4.6",
    "corner>=2.2.1",
    "emcee>=3.1.4",
    "matplotlib>=3.6.3",
    "numpy>=1.24.1",
    "scipy>=1.10.0",
    "tqdm>=4.64.1",
    "pyFFTW>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.2.1",
    "pytest-cov >= 4.0.0",
    "sphinx == 5.3",
    "sphinx-autobuild == 2021.3.14",
    "sphinx-autodoc-typehints == 1.23",
    "sphinx_rtd_theme == 1.2.0",
    "numpydoc==1.5.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "GPLv3"

[project.urls]
Github = "https://gitlab.oca.eu/oimodeler/oimodeler"

[tool.setuptools]
license-files = [
    "LICENSE",
]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "docs*",
    "images*",
    "examples*",
    "requirements*",
]

[tool.setuptools.dynamic]
version = {attr = "oimodeler.__version__"}

[tool.black]
line-length = 79

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
